--- a/app/languages/locale-en.json
+++ b/app/languages/locale-en.json
@@ -5,6 +5,7 @@
     "Profile": "Profile",
     "Logout": "Logout",
     "ANONYMOUS": "Anonymous",
+    "INFO_CUSTOMER": "Customer info",
     "BLANK_NAME": "Blank name",
     "ANSWERED": "Answered",
     "NO_ANSWER": "No Answer",
@@ -29,6 +30,7 @@
     "EXPORT": "Export file",
     "DELETE": "Delete",
     "DELETE_SELECT": "Delete records seleted",
+    "SELECTED": "Selected",
     "CALL_THIS_NUMBER": "Call this number",
     "CUSTOMER_CODE": "Cus Code",
     "CUSTOMER_NAME": "Full name",
