--- a/app/languages/locale-vi.json
+++ b/app/languages/locale-vi.json
@@ -5,6 +5,7 @@
     "Profile": "Thông tin tài khoản",
     "Logout": "Đăng xuất",
     "ANONYMOUS": "Khách vãng lai",
+    "INFO_CUSTOMER": "Thông tin khách hàng",
     "BLANK_NAME": "Blank name",
     "ANSWERED": "Trả lời",
     "NO_ANSWER": "Không trả lời",
@@ -29,6 +30,7 @@
     "EXPORT": "Export file",
     "DELETE": "Xóa",
     "DELETE_SELECT": "Xóa mẫu tin được chọn",
+    "SELECTED": "Đã chọn",
     "CALL_THIS_NUMBER": "Gọi số này",
     "CUSTOMER_CODE": "Mã KH",
     "CUSTOMER_NAME": "Họ Tên",
