Phan trang table voi API Laravel 5.4

--- a/app/languages/locale-en.json
+++ b/app/languages/locale-en.json
@@ -1,10 +1,11 @@
 {
-    "LANGUAGE": "Language",
+    "LANGUAGE": "English",
     "BUTTON_LANG_VI": "Vietnamese",
     "BUTTON_LANG_EN": "English",
-    "Profile": "Profile",
-    "Logout": "Logout",
+    "PROFILE": "Profile",
+    "LOGOUT": "Logout",
     "ANONYMOUS": "Anonymous",
+    "CONSOLE_STOP": "Please stop, are you trying to do something?!",
     "INFO_CUSTOMER": "Customer info",
     "BLANK_NAME": "Blank name",
     "ANSWERED": "Answered",
@@ -22,7 +23,7 @@
     "CALLHISTORY": "Call history",
     "HELP": "Help",
     "DASHBOARD_CUSTOMER": "New customers",
-    "DASHBOARD_HISTORY": "Notes latest",
+    "DASHBOARD_HISTORY": "Latest notes",
     "DASHBOARD_TODO_LIST": "Todo list",
     "ADD": "Add new",
     "EDIT": "Edit",
@@ -36,5 +37,48 @@
     "CUSTOMER_NAME": "Full name",
     "MOBILE": "Mobile",
     "PHONE": "Phone",
-    "EMAIL": "Email"
+    "EMAIL": "Email",
+    "SEARCH": "Search",
+    "FILTER_BY_CONTENT": "Filter by content",
+    "FILTER_BY_TAG": "Filter by tag",
+    "NOTE_HISTORY": "Note history",
+    "CALL_HISTORY": "Call history",
+    "FIRSTNAME": "First name",
+    "LASTNAME": "Last name",
+    "GENDER": "Gender",
+    "MALE": "Male",
+    "FEMALE": "Female",
+    "ADDRESS": "Address",
+    "NOTE_CUSTOMER": "Note customer",
+    "BACK": "Back",
+    "CLEAR": "Clear",
+    "SAVE": "Save",
+    "ADD_NEW": "Add new",
+    "ADD_NOTE": "Add note",
+    "UPDATE": "Update",
+    "ENTER_CUSTOMER_TAGS": "Enter customer tags",
+    "ADD_TAGS": "Add tags",
+    "ADD_TAGS_CUSTOMER": "Add tags customer",
+    "ADD_TAGS_NOTE": "Add tags note",
+    "ENTER_NOTE_CONTENT": "Enter note content",
+    "ENTER_PHONE_NUMBER": "Enter phone number",
+    "ENTER_FIRSTNAME": "Enter first name",
+    "ENTER_LASTNAME": "Enter last name",
+    "ENTER_MOBILE": "Enter mobile number",
+    "SAVE_AND_ADD_NOTE": "Save and add note",
+    "LOGIN": "Login",
+    "REGISTER": "Register",
+    "PASSWORD": "Password",
+    "CONFIRM": "Confirm",
+    "DELETE_SUCCESS": "Deleted successfully!",
+    "ENTER_KEYWORD": "Enter keyword",
+    "ADVANCED": "Advanced",
+    "HIDE_ADVANCED": "Hiden advanced",
+    "CONDITION": "Condition",
+    "LIKE":"Like",
+    "LIKE_LEFT":"Like left",
+    "LIKE_RIGHT":"Like right",
+    "NOT_LIKE":"Not like",
+    "NOT_LIKE_LEFT":"Not like left",
+    "NOT_LIKE_RIGHT":"Not like right"
 }
