--- a/app/languages/locale-vi.json
+++ b/app/languages/locale-vi.json
@@ -1,10 +1,11 @@
 {
-    "LANGUAGE": "Ngôn ngữ",
+    "LANGUAGE": "Tiếng Việt",
     "BUTTON_LANG_VI": "Tiếng Việt",
     "BUTTON_LANG_EN": "Tiếng Anh",
-    "Profile": "Thông tin tài khoản",
-    "Logout": "Đăng xuất",
+    "PROFILE": "Thông tin tài khoản",
+    "LOGOUT": "Đăng xuất",
     "ANONYMOUS": "Khách vãng lai",
+    "CONSOLE_STOP": "Hãy dừng lại, bạn đang cố gắng làm điều gì đó?!",
     "INFO_CUSTOMER": "Thông tin khách hàng",
     "BLANK_NAME": "Blank name",
     "ANSWERED": "Trả lời",
@@ -36,5 +37,48 @@
     "CUSTOMER_NAME": "Họ Tên",
     "MOBILE": "Di động",
     "PHONE": "Điện thoại bàn",
-    "EMAIL": "Email"
+    "EMAIL": "Email",
+    "SEARCH": "Tìm kiếm",
+    "FILTER_BY_CONTENT": "Tìm theo nội dung",
+    "FILTER_BY_TAG": "Tìm theo tag",
+    "NOTE_HISTORY": "Lịch sử tiếp nhận",
+    "CALL_HISTORY": "Lịch sử cuộc gọi",
+    "FIRSTNAME": "Tên",
+    "LASTNAME": "Họ",
+    "GENDER": "Giới tính",
+    "MALE": "Nam",
+    "FEMALE": "Nữ",
+    "ADDRESS": "Địa chỉ",
+    "NOTE_CUSTOMER": "Ghi chú khách hàng",
+    "BACK": "Quay lại",
+    "CLEAR": "Làm mới",
+    "SAVE": "Lưu",
+    "ADD_NEW": "Thêm mới",
+    "ADD_NOTE": "Thêm ghi chú",
+    "UPDATE": "Cập nhật",
+    "ENTER_CUSTOMER_TAGS": "Nhập tags",
+    "ADD_TAGS": "Thêm tags",
+    "ADD_TAGS_CUSTOMER": "Thêm tags khách hàng",
+    "ADD_TAGS_NOTE": "Thêm tags ghi chú",
+    "ENTER_NOTE_CONTENT": "Nội dung tiếp nhận",
+    "ENTER_PHONE_NUMBER": "Nhập số điện thoại",
+    "ENTER_FIRSTNAME": "Nhập tên",
+    "ENTER_LASTNAME": "Nhập họ",
+    "ENTER_MOBILE": "Nhập số di động",
+    "SAVE_AND_ADD_NOTE": "Lưu KH và Ghi chú",
+    "LOGIN": "Đăng nhập",
+    "REGISTER": "Đăng ký",
+    "PASSWORD": "Mật khẩu",
+    "CONFIRM": "Xác nhận",
+    "DELETE_SUCCESS": "Đã xóa thành công!",
+    "ENTER_KEYWORD": "Nhập thông tin cần tìm",
+    "ADVANCED": "Nâng cao",
+    "HIDE_ADVANCED": "Ẩn nâng cao",
+    "CONDITION": "Điều kiện",
+    "LIKE": "Gần giống",
+    "LIKE_LEFT": "Gần giống bên trái",
+    "LIKE_RIGHT": "Gần giống bên phải",
+    "NOT_LIKE": "Loại trừ gần giống",
+    "NOT_LIKE_LEFT": "Loại trừ gần giống bên trái",
+    "NOT_LIKE_RIGHT": "Loại trừ gần giống bên phải"
 }
